--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ repo_url: https://github.com/AegirCoop/aegir-coop-docs
 theme: readthedocs
 site_favicon: '_images/favicon.ico'
 docs_dir: .
-site_dir: '_site'
+site_dir: '/tmp/aegir-coop-docs/_site'
 extra_css:
   - '_css/icons.css'
   - '_css/images.css'
@@ -11,7 +11,7 @@ extra_css:
   - '_css/policy.css'
   - '_css/style.css'
   - '_css/toc.css'
-extra_js:
+extra_javascript:
   - '_js/policy.js'
 markdown_extensions:
   - 'attr_list'
