--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,4 +45,7 @@ pages:
   - 'Terms of Service': 'policies/terms-of-service.md'
   - 'Privacy Policy': 'policies/privacy-policy.md'
   - 'Acceptable Use Policy': 'policies/acceptable-use-policy.md'
-
+- 'Standard Contracts': 'contracts.md'
+- 'Standard Contracts':
+    - 'Independent Contractor Agreement': 'contracts/contractor.md'
+    - 'Non-Disclosure Agreement (NDA)': 'contracts/non-disclosure.md'
