--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,12 +28,12 @@ pages:
     - 'Annex I: Application for Admission as an Auxiliary Member': 'by-laws/annexes/annex1.md'
     - 'Annex II: Application for Admission as a Member': 'by-laws/annexes/annex2.md'
     - 'Annex III: Member Agreement': 'by-laws/annexes/annex3.md'
-  - 'Examples': 'by-laws/examples.md'
-  - 'Examples':
-    - 'Board Resolution on Admission as an Auxiliary Member': 'by-laws/examples/admission1.md'
-    - 'Board Resolution on Admission as a Producer Member': 'by-laws/examples/admission2.md'
-    - 'Board Resolution on Changes to Qualifying Shares': 'by-laws/examples/changes.md'
-    - 'Stock Qualifying Shares': 'by-laws/examples/shares.md'
+  - 'Templates': 'by-laws/templates.md'
+  - 'Templates':
+    - 'Board Resolution on Admission as an Auxiliary Member': 'by-laws/templates/admission1.md'
+    - 'Board Resolution on Admission as a Producer Member': 'by-laws/templates/admission2.md'
+    - 'Board Resolution on Changes to Qualifying Shares': 'by-laws/templates/changes.md'
+    - 'Stock Qualifying Shares': 'by-laws/templates/shares.md'
   - 'Commentary on Cooperative By-laws': 'by-laws/commentary.md'
   - 'Commentary on Cooperative By-laws':
     - 'Comments on By-law 1': 'by-laws/commentary/by-law1.md'
