Update to Ægir Coop and add 'DRAFT' to by-law 2.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Aegir Coop
+site_name: Ægir Coop
 repo_url: https://github.com/AegirCoop/aegir-coop-docs
 theme: readthedocs
 site_favicon: '_images/favicon.ico'
