Split out individual vs. organizational agreements, and add collapsible menu items.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ extra_css:
   - '_css/toc.css'
 extra_javascript:
   - '_js/policy.js'
+  - '_js/menu.js'
 markdown_extensions:
   - 'attr_list'
 pages:
@@ -25,13 +26,23 @@ pages:
   - 'By-law 3: Rules on Mediation of Disputes': 'by-laws/by-law3.md'
   - 'Templates': 'by-laws/templates.md'
   - 'Templates':
-    - 'Application for Admission as an Auxiliary Member': 'by-laws/templates/membership/application1.md'
-    - 'Board Resolution on Admission as an Auxiliary Member': 'by-laws/templates/membership/admission1.md'
-    - 'Application for Admission as a Member': 'by-laws/templates/membership/application2.md'
-    - 'Board Resolution on Admission as a Producer Member': 'by-laws/templates/membership/admission2.md'
-    - 'Member Agreement': 'by-laws/templates/membership/agreement.md'
-    - 'Board Resolution on Changes to Qualifying Shares': 'by-laws/templates/shares/changes.md'
-    - 'Stock Qualifying Shares': 'by-laws/templates/shares/shares.md'
+    - 'Individual Membership': 'by-laws/templates/membership/individual.md'
+    - 'Individual Membership':
+      - 'Application for Admission as an Auxiliary Member': 'by-laws/templates/membership/individual/application1.md'
+      - 'Board Resolution on Admission as an Auxiliary Member': 'by-laws/templates/membership/individual/admission1.md'
+      - 'Application for Admission as a Member': 'by-laws/templates/membership/individual/application2.md'
+      - 'Board Resolution on Admission as a Producer Member': 'by-laws/templates/membership/individual/admission2.md'
+      - 'Member Agreement': 'by-laws/templates/membership/individual/agreement.md'
+    - 'Organizational Membership': 'by-laws/templates/membership/organization.md'
+    - 'Organizational Membership':
+      - 'Application for Admission as an Auxiliary Member': 'by-laws/templates/membership/organization/application1.md'
+      - 'Board Resolution on Admission as an Auxiliary Member': 'by-laws/templates/membership/organization/admission1.md'
+      - 'Application for Admission as a Member': 'by-laws/templates/membership/organization/application2.md'
+      - 'Board Resolution on Admission as a Producer Member': 'by-laws/templates/membership/organization/admission2.md'
+      - 'Member Agreement': 'by-laws/templates/membership/organization/agreement.md'
+    - 'Shares':
+      - 'Board Resolution on Changes to Qualifying Shares': 'by-laws/templates/shares/changes.md'
+      - 'Stock Qualifying Shares': 'by-laws/templates/shares/shares.md'
   - 'Commentary on Cooperative By-laws': 'by-laws/commentary.md'
   - 'Commentary on Cooperative By-laws':
     - 'Comments on By-law 1': 'by-laws/commentary/by-law1.md'
