Update member agreements and add commentary.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,7 @@ pages:
     - 'Comments on By-law 1': 'by-laws/commentary/by-law1.md'
     - 'Comments on By-law 2': 'by-laws/commentary/by-law2.md'
     - 'Comments on By-law 3': 'by-laws/commentary/by-law3.md'
+    - 'Comments on Member Agreement': 'by-laws/commentary/agreement.md'
 - 'Policies': 'policies.md'
 - 'Policies':
   - 'Terms of Service': 'policies/terms-of-service.md'
