Add initial consulting services and rate card.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,10 @@ pages:
 - 'Services':
   - 'Support': 'services/support.md' 
   - 'Training': 'services/training.md' 
+  - 'Managed Services': 'services/managed.md' 
+  - 'Consulting': 'services/consulting.md' 
+  - 'Consulting':
+    - 'Rate Card': 'services/consulting/rate_card.md' 
 - 'Resources': 'resources.md'
 - 'Resources':
   - 'Infrastructure': 'resources/infra.md'
