Remove redundant css/js/images/etc. from ops dir.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ site_favicon: '_images/favicon.ico'
 docs_dir: .
 site_dir: '/tmp/aegir-coop-docs/_site'
 extra_css:
+  - '_css/dashboard.css'
   - '_css/icons.css'
   - '_css/images.css'
   - '_css/menu.css'
@@ -17,6 +18,7 @@ extra_css:
 extra_javascript:
   - '_js/policy.js'
   - '_js/menu.js'
+  - '_js/dashboard.js'
 markdown_extensions:
   - 'attr_list'
 pages:
